--- a/WorldCupWPF/Textures/Languages/Lang.en.resx
+++ b/WorldCupWPF/Textures/Languages/Lang.en.resx
@@ -153,6 +153,9 @@
   <data name="lbDifference" xml:space="preserve">
     <value>Difference</value>
   </data>
+  <data name="lbDraw" xml:space="preserve">
+    <value>Draw</value>
+  </data>
   <data name="lbFavoritePlayers" xml:space="preserve">
     <value>Favorite Players</value>
     <comment>Label - WorldCup</comment>
@@ -160,8 +163,11 @@
   <data name="lbFavoriteTeam" xml:space="preserve">
     <value>Favorite Team:</value>
   </data>
-  <data name="lbGoal" xml:space="preserve">
+  <data name="lbGoals" xml:space="preserve">
     <value>Goals</value>
+  </data>
+  <data name="lbLoses" xml:space="preserve">
+    <value>Losses</value>
   </data>
   <data name="lbMatch" xml:space="preserve">
     <value>Match</value>
@@ -180,6 +186,12 @@
   </data>
   <data name="lbScored" xml:space="preserve">
     <value>Scored</value>
+  </data>
+  <data name="lbWins" xml:space="preserve">
+    <value>Wins</value>
+  </data>
+  <data name="lbYellowCards" xml:space="preserve">
+    <value>Yellow Cards</value>
   </data>
   <data name="men" xml:space="preserve">
     <value>Men</value>
